Fix potential crash when enqueueing from empty files view

If the current folder is empty, then mPendingEntries will be empty. Calling
front on an empty queue is undefined behaviour, and can result in a crash.

Test-plan: added an autotest

BUG: 441525
CCBUG: 484972